--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
-a {
-    text-decoration: none;
+.link_classes {
+  color: cornflowerblue;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+h1 {
+
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: bold;
+
+}
+
+.default_txt 
+{
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    color: #7D7987
+
+}
+
+.welcome 
+{
+    color: coral;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 80px;
+    
 }
