Updated JS-goals and params

--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
   line-height: 20px;
 }
 
-.main_header {
+/* .main_header {
 
     font-size: 28px;
     line-height: 36px;
     font-weight: bold;
 
-}
+} */
 
 .default_txt 
 {
